fix(cors): configuracion definitiva en SecurityFilterChain - elimina WebConfig y CorsFilterConfig conflictivos